[package]
name = "memvectordb"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.6"
schemars = "0.8.21"
rayon = "1.7.0"
warp = "0.3.7"
chrono = { version = "0.4.38", features = ["serde"] }
pretty_env_logger = "0.5.0"
log = "0.4.22"
fern = "0.7.0"
humantime = "2.1.0"
regex = "1.11.1"


[dependencies.uuid]
version = "1.11.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dev-dependencies]
tempfile = "3.13"
mockall = "0.13"
